// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AzureResourceGroup-Snapshot renders a AzureResourceGroup with tags 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azurerm_resource_group.testRG_rg_D9B234FB.id}"
    },
    "location": {
      "value": "\${azurerm_resource_group.testRG_rg_D9B234FB.location}"
    },
    "name": {
      "value": "\${azurerm_resource_group.testRG_rg_D9B234FB.name}"
    }
  },
  "resource": {
    "azurerm_resource_group": {
      "testRG_rg_D9B234FB": {
        "lifecycle": [
          {
            "ignore_changes": [
            ]
          }
        ],
        "location": "eastus",
        "name": "rg-test",
        "tags": {
          "description": "test environmnet",
          "name": "rug"
        }
      }
    }
  }
}"
`;

exports[`AzureResourceGroup-Snapshot renders a AzureResourceGroup without tags 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azurerm_resource_group.testRG_rg_D9B234FB.id}"
    },
    "location": {
      "value": "\${azurerm_resource_group.testRG_rg_D9B234FB.location}"
    },
    "name": {
      "value": "\${azurerm_resource_group.testRG_rg_D9B234FB.name}"
    }
  },
  "resource": {
    "azurerm_resource_group": {
      "testRG_rg_D9B234FB": {
        "lifecycle": [
          {
            "ignore_changes": [
            ]
          }
        ],
        "location": "eastus",
        "name": "rg-test"
      }
    }
  }
}"
`;
